component(yt-player): define theme and fix progress element overlap

--- a/projects/player/controls/slider/slider.component.scss
+++ b/projects/player/controls/slider/slider.component.scss
@@ -20,6 +20,7 @@ yt-slider {
       background-color: $_white-alto;
 
       &-click-area {
+        position: absolute;
         padding: $_margin;
         cursor: pointer;
         user-select: none;
